# pdx

./: .gitignore  Makefile  README-Windows.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: fast-forward.yml  typecheck.yml
pdx/: cli.py  find.py  model.py  organizer.py  qdrant.py  query.py
